<resources>
    <string name="app_name">OnStage</string>
    <string name="on_stage">On stage!</string>
    <string name="on_console">On console</string>
    <string name="acoustic_guitar">Acoustic guitar</string>
    <string name="electric_guitar">Electric guitar</string>
    <string name="bass">Bass</string>
    <string name="drum">Drum</string>
    <string name="voice">Voice</string>
    <string name="keyboard">Keyboard</string>
    <string name="add_instrument">Add instrument</string>
    <string name="save">save</string>
    <string name="start_concert">START CONCERT</string>
    <string name="player">Player</string>
    <string name="notes">Notes</string>
    <string name="remove_from_stage">Remove from stage</string>
    <string name="name">Name</string>
    <string name="monitor1">Monitor 1</string>
    <string name="monitor2">Monitor 2</string>
    <string name="monitor3">Monitor 3</string>
    <string name="monitor4">Monitor 4</string>
</resources>
