<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_instrument_on_stage_desc_musicista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_instrument_on_stage_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/dialog_instrument_on_stage_remove_instrument_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_stage"  />
</LinearLayout>